--- a/assets/scss/_pages/_login.scss
+++ b/assets/scss/_pages/_login.scss
@@ -76,7 +76,7 @@
 		padding: 35px;
 		background: #fff;
 		border-radius: 10px;
-		box-shadow: 0 0 12px rgba(69, 76, 85, .16%);
+		box-shadow: 0 0 12px rgba(69, 76, 85, .16);
 		.-text{
 			letter-spacing: 2px;
 		}
