--- a/assets/scss/_components/_general.scss
+++ b/assets/scss/_components/_general.scss
@@ -128,14 +128,24 @@
                     color: #666666;
                 }
             }
+            >thead .sorting:before, >thead .sorting:after{
+                display: none;
+            }
+          
             >:not(caption)>*>* {
-                padding: 15px 0px;
+                padding: 15px 5px;
             }
         }
         .form-check-input{
             margin-left: 0;
             width: 40px;
             height: 20px;
+            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba%28102, 102, 102, 1%29'/%3e%3c/svg%3e");
+            &:checked {
+                background-color: #fc8800;
+                border-color: #fc8800;
+                background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
+            }
         }
 	}
 
@@ -170,6 +180,8 @@
             color: #666666;
             > :not(caption) > * > *{
                 padding: 14px 10px;
+                font-weight: 400;
+                color: #666666;
             }
 
             .sorting:before, .sorting:after{
@@ -218,6 +230,7 @@ table.dataTable{
             padding-left: 9px;
             width: 16px;
             height: 20px;
+            line-height: 17px;
         }
         .sorting span:before, .sorting span:after {
             content: "\e919";
@@ -225,10 +238,17 @@ table.dataTable{
             position: absolute;
             top: -2px;
             font-size: 4px;
+            font-weight: 400;
         }
         .sorting span:after {
             content: "\e918";
             top: 4px;
+        }
+        .sorting_desc span:after {
+            top: 2px;
+        }
+        .sorting_asc span::before{
+            top: 0;
         }
         .sorting_asc span:after,.sorting_desc span:before {
             opacity: 0;
@@ -296,8 +316,16 @@ table.dataTable{
 
     &.-st3{
         font-size: 12px;
+        font-weight: 500;
+        color: #666666;
         th{
             font-weight: 500;
+            i{
+                position: relative;
+                top: -2px;
+                font-size: 5px;
+                font-weight: 400;
+            }
         }
         th, td{
             &:first-child{
@@ -333,9 +361,35 @@ table.dataTable{
     }
     &.-modal{
         min-height: 265px;
+        font-size: 12px;
+        .table__fake__header, .table__fake__content {
+            padding: 0;
+        }
+        .table__fake__td{
+            padding: 0 15px;
+        }
+
+        .checkbox__fake{
+            height: 20px;
+            padding-left: 35px;
+        }
+        .checkbox__fake .checkmark::after {
+            left: 7px;
+            top: 2px;
+            width: 6px;
+            height: 12px;
+        }
+        .checkmark {
+            height: 20px;
+            width: 20px;
+        }
+        
     }
 }
 .modal-s1{
+    .modal-content {
+        border-radius: 8px;
+    }
     .modal-header {
         padding: 27px 35px;
     }
@@ -345,6 +399,7 @@ table.dataTable{
             border-right: 1px solid #F1F1F1;
         }
     }
+    
     .btn-close {
         position: absolute;
         bottom: 0;
@@ -356,16 +411,17 @@ table.dataTable{
         color: #000;
         opacity: 1;
         border-radius: 32px;
-        padding: 11px 0;
+        padding: 0;
         font-size: 10px;
         font-weight: 700;
+        height: 32px;
         &::before{
             content: "\e900";
             font-family: icomoon;
             font-size: 5px;
             position: absolute;
             left: 10px;
-            top: 9px;
+            top: 13px;
             transform: rotate(180deg);
         }
     }
@@ -475,6 +531,8 @@ table.dataTable{
     width: 100%;
     background: #fff;
     z-index: 1100;
+    border-radius: 10px;
+    overflow: hidden;
     a{
         position: relative;
         font-size: 14px;
@@ -486,6 +544,10 @@ table.dataTable{
     i{
         position: absolute;
         left: 25px;
+        top: 0;
+        height: 100%;
+        display: flex;
+        align-items: center;
     }
     .-right{
         a{
@@ -743,7 +805,7 @@ table.dataTable{
         &__content{
             padding: 30px 20px 20px;
             h6 {
-                font-size: 14px;
+                font-size: 18px;
             }
         }
     }
@@ -762,6 +824,35 @@ table.dataTable{
             font-size: 12px;
         }
     }
+    .checkbox__fake {
+        height: 26px;
+        display: flex;
+        align-items: center;
+        padding-left:40px;
+        .checkmark::after {
+            left: 10px;
+            top: 4px;
+            width: 6px;
+            height: 12px;
+          }
+    }
+    .checkmark {
+        height: 26px;
+        width: 26px;
+      }
+
+    .table__fake{
+        &.-modal {
+            min-height: 245px;
+        }
+        .icon-trash {
+            position: relative;
+            top: -2px;
+            font-size: 20px;
+            font-weight: 400;
+        }
+        
+    }
     .accordion{
         font-size: 12px;
     }
@@ -772,6 +863,12 @@ table.dataTable{
         }
         &.-small {
             max-width: 100%;
+        }
+    }
+    .modal-s1{
+        .modal-dialog {
+            max-width: 300px;
+            margin: 50px auto;
         }
     }
 }
