--- a/assets/scss/_components/_base.scss
+++ b/assets/scss/_components/_base.scss
@@ -11,7 +11,7 @@ body {
     color: #666666;
     font-weight: 500;
     font-size: 14px;
-    line-height: 16px;
+    line-height: normal;
     position: relative;
     background: #F9F9F9;
     --menu-left: 260px;
@@ -66,6 +66,15 @@ hr{
 label{
     cursor: pointer;
 }
+
+.checkbox__fake{display:block;position:relative;padding-left:20px;margin-bottom:12px;cursor:pointer;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}
+.checkbox__fake input{position:absolute;opacity:0;cursor:pointer;height:0;width:0}
+.checkmark{position:absolute;top:0;left:0;height:16px;width:16px;background-color:#fff;border:1px solid #CCCCCC;border-radius:4px}
+.checkbox__fake input:checked ~ .checkmark{background-color:#666666}
+.checkmark:after{content:"";position:absolute;display:none}
+.checkbox__fake input:checked ~ .checkmark:after{display:block}
+.checkbox__fake .checkmark:after{left:5px;top:3px;width:4px;height:7px;border:solid white;border-width:0 2px 2px 0;-webkit-transform:rotate(45deg);-ms-transform:rotate(45deg);transform:rotate(45deg);border-radius:1px}
+
 .-letter-1{
     letter-spacing: 1px;
 }.-letter-2{
@@ -115,25 +124,30 @@ label{
     &:hover{
         color: #ffffff;
         box-shadow: 0 0 10px #fff;
-        background: #51A1B9;
+        background: $color_secondary;
+        border-color: $color_secondary;
     }
     &.-arrow-right{
         &::after {
             content: "\e900";
             font-family: 'icomoon';
-            display: inline-block;
+            position: absolute;
+            top: 17px;
+            right: 18px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             font-size: 6px;
+            font-weight: 400;
             width: 24px;
             height: 24px;
             border-radius: 50%;
             background: #fff;
             color: #fc8800;
-            position: absolute;
-            top: calc(50% - 12px);
-            right: 18px;
             text-align: center;
             line-height: 22px;
             text-indent: 3px;
+
         }
         &:hover{
             &::after {
@@ -148,6 +162,7 @@ label{
             font-family: 'icomoon';
             display: inline-block;
             font-size: 6px;
+            font-weight: 400;
             width: 24px;
             height: 24px;
             border-radius: 50%;
@@ -157,7 +172,7 @@ label{
             top: calc(50% - 12px);
             right: 18px;
             text-align: center;
-            line-height: 22px;
+            line-height: 25px;
             text-indent: 3px;
         }
         &:hover{
@@ -233,6 +248,11 @@ label{
         }
         &.-s2{
             width: 100%;
+
+            &.-modal {
+                width: 200px;
+                height: 54px;
+            }
         }
     }
 }
@@ -252,9 +272,19 @@ label{
     width: 100%;
     max-width: 90px;
 }
+.mw100px{
+    width: 100%;
+    max-width: 100px;
+}
 .mw170px{
     width: 100%;
     max-width: 170px;
+}
+.minw100px{
+    min-width: 100px;
+}
+.minw170px{
+    min-width: 170px;
 }
 
 .col-20{
