--- a/assets/scss/_pages/_singlefunction.scss
+++ b/assets/scss/_pages/_singlefunction.scss
@@ -40,6 +40,7 @@
 			i{
 				position: relative;
 				top: 1px;
+				font-weight: 400;
 				color: $color_primary;
 			}
 			&:hover{
@@ -67,6 +68,7 @@
 	            font-family: 'icomoon';
 	            display: inline-block;
 	            font-size: 6px;
+				font-weight: 400;
 	            width: 24px;
 	            height: 24px;
 	            text-align: center;
