--- a/assets/scss/_pages/_login.scss
+++ b/assets/scss/_pages/_login.scss
@@ -6,10 +6,22 @@
 		justify-content: center;
 		padding: 50px 0;
 		min-height: 100vh;
-		background-image:url(../img/login-bg.jpg);
-		background-repeat: no-repeat;
-		background-size:cover;
-		background-position:center;
+		
+		&::before{
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background-image:url(../img/login-bg.jpg);
+			background-repeat: no-repeat;
+			background-size:cover;
+			background-position:center;
+			opacity: .5;
+			z-index: -1;
+			pointer-events: none;
+		}
 		.el__box{
 			&.-register{
 				font-size: 12px;
