--- a/assets/scss/_components/_base.scss
+++ b/assets/scss/_components/_base.scss
@@ -183,6 +183,7 @@ label{
     }
     &.-secondary{
         min-width: 300px;
+        font-weight: 500;
         border: 1px solid $color_primary;
         background: transparent;
         color: $color_primary;
