--- a/assets/scss/_components/_general.scss
+++ b/assets/scss/_components/_general.scss
@@ -282,7 +282,8 @@ table.dataTable{
     }
     .el__cat{
         display: inline-block;
-        padding: 3px 18px;
+        min-height: 24px;
+        padding: 0px 18px;
         font-size: 14px;
         border: 1px solid $color_primary;
         border-radius: 13px;
@@ -314,28 +315,59 @@ table.dataTable{
         }
     }
 
-    &.-st3{
-        font-size: 12px;
+    // &.-st3{
+    //     font-size: 12px;
+    //     font-weight: 500;
+    //     color: #666666;
+    //     th{
+    //         font-weight: 500;
+    //         i{
+    //             position: relative;
+    //             top: -2px;
+    //             font-size: 5px;
+    //             font-weight: 400;
+    //         }
+    //     }
+    //     th, td{
+    //         &:first-child{
+    //             padding-left: 0;
+    //         }
+    //         &:last-child{
+    //             padding-right: 0;
+    //             text-align: right;
+    //         }
+    //     }
+    // }
+}
+
+.box__toggle{
+    font-size: 12px;
+    font-weight: 500;
+    color: #666666;
+    &.active{
+        i{
+            transform: rotate(180deg);
+        }
+    }
+    &__header{
+        cursor: pointer;
         font-weight: 500;
-        color: #666666;
-        th{
-            font-weight: 500;
-            i{
-                position: relative;
-                top: -2px;
-                font-size: 5px;
-                font-weight: 400;
-            }
+        border-bottom: 2px solid #707070;
+        >div{
+            padding: 15px 2px;
         }
-        th, td{
-            &:first-child{
-                padding-left: 0;
-            }
-            &:last-child{
-                padding-right: 0;
-                text-align: right;
-            }
+        i{
+            position: relative;
+            top: -2px;
+            font-size: 5px;
+            font-weight: 400;
+            transition: all .5s;
         }
+    }
+    ul{}
+    li{
+        padding: 15px 2px;
+        border-bottom: 1px solid #CCCCCC;
     }
 }
 
@@ -402,7 +434,7 @@ table.dataTable{
     
     .btn-close {
         position: absolute;
-        bottom: 0;
+        bottom: -70px;
         left: -80px;
         background: transparent;
         min-width: 60px;
@@ -419,10 +451,12 @@ table.dataTable{
             content: "\e900";
             font-family: icomoon;
             font-size: 5px;
+            font-weight: 400;
             position: absolute;
+            top: -2px;
             left: 10px;
-            top: 13px;
             transform: rotate(180deg);
+            line-height: 32px;
         }
     }
 }
@@ -592,10 +626,6 @@ table.dataTable{
             position: absolute;
             top: calc( 50% - 12px );
             left: 28px;
-        }
-        &.collapsed{
-            &::after{
-            }
         }
         &:not(.collapsed) {
             background-color: #FFF9EF;
