--- a/assets/scss/_components/_base.scss
+++ b/assets/scss/_components/_base.scss
@@ -61,7 +61,7 @@ strong{
 hr{
     margin: 25px 0;
     opacity: 1;
-    background-color: #F1F1F1;
+    background-color: #CCCCCC;
 }
 label{
     cursor: pointer;
