--- a/assets/scss/_pages/_login.scss
+++ b/assets/scss/_pages/_login.scss
@@ -14,11 +14,10 @@
 			left: 0;
 			width: 100%;
 			height: 100%;
-			background-image:url(../img/login-bg.jpg);
+			background-image:url(../img/login-bg.png);
 			background-repeat: no-repeat;
 			background-size:cover;
 			background-position:center;
-			opacity: .5;
 			z-index: -1;
 			pointer-events: none;
 		}
