--- a/css/main.css
+++ b/css/main.css
@@ -85,7 +85,7 @@ label {
   background-size: contain;
   pointer-events: none;
   position: relative;
-  top: -2px; }
+  top: -3px; }
 
 .ic-duong {
   display: inline-block;
@@ -834,7 +834,9 @@ label {
         opacity: 0;
         transition: all .2s; }
         .sc__box.-list .table .table__actiion .dropdown-toggle {
-          display: inline-block;
+          display: flex;
+          align-items: center;
+          justify-content: center;
           width: 28px;
           height: 28px;
           background-color: #fff;
@@ -877,33 +879,36 @@ label {
         --bs-table-bg: #FFF0D8;
         --bs-table-accent-bg: #FFF0D8; }
 
-table.dataTable thead th {
+table thead th {
   background: transparent !important;
   white-space: nowrap; }
-table.dataTable thead span.sort-icon {
+table thead span.sort-icon {
   position: relative;
   display: inline-block;
   padding-left: 9px;
   width: 16px;
   height: 20px;
   line-height: 17px; }
-table.dataTable thead .sorting span:before, table.dataTable thead .sorting span:after {
-  content: "\e919";
-  font-family: 'icomoon';
+table thead .sorting span:before, table thead .sorting span:after {
+  content: "";
   position: absolute;
-  top: -2px;
-  font-size: 4px;
-  font-weight: 400; }
-table.dataTable thead .sorting span:after {
-  content: "\e918";
-  top: 4px; }
-table.dataTable thead .sorting_desc span:after {
-  top: 2px; }
-table.dataTable thead .sorting_asc span::before {
-  top: 0; }
-table.dataTable thead .sorting_asc span:after, table.dataTable thead .sorting_desc span:before {
+  top: 4px;
+  -webkit-mask-image: url(../img/arrow-up.svg);
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-size: 100% 100%;
+  background-color: #707070;
+  width: 7px;
+  height: 5px; }
+table thead .sorting span:after {
+  -webkit-mask-image: url(../img/arrow-down.svg);
+  top: 10px; }
+table thead .sorting_desc span:after {
+  top: 7px; }
+table thead .sorting_asc span::before {
+  top: 7px; }
+table thead .sorting_asc span:after, table thead .sorting_desc span:before {
   opacity: 0; }
-table.dataTable thead .sorting_asc_disabled span:before, table.dataTable thead .sorting_desc_disabled span:after {
+table thead .sorting_asc_disabled span:before, table thead .sorting_desc_disabled span:after {
   opacity: 0; }
 
 .table {
@@ -976,7 +981,8 @@ table.dataTable thead .sorting_asc_disabled span:before, table.dataTable thead .
   .table__fake__header {
     padding: 0 25px;
     font-size: 10px;
-    background: #F9F9F9; }
+    background: #F9F9F9;
+    border-bottom: 1px solid #d6d6d6; }
   .table__fake__content {
     padding: 0 25px; }
   .table__fake__th {
@@ -994,24 +1000,24 @@ table.dataTable thead .sorting_asc_disabled span:before, table.dataTable thead .
     .table__fake.-modal .table__fake__td {
       padding: 0 15px; }
     .table__fake.-modal .checkbox__fake {
-      height: 20px;
-      padding-left: 35px; }
+      height: 14px;
+      padding-left: 20px; }
     .table__fake.-modal .checkbox__fake .checkmark::after {
-      left: 7px;
-      top: 2px;
-      width: 6px;
-      height: 12px; }
+      left: 4px;
+      top: 1px;
+      width: 4px;
+      height: 8px; }
     .table__fake.-modal .checkmark {
-      height: 20px;
-      width: 20px; }
+      height: 14px;
+      width: 14px; }
 
-.modal-s1 .modal-dialog {
-  padding-bottom: 80px; }
 .modal-s1 .modal-content {
-  border-radius: 8px; }
+  border-radius: 8px;
+  overflow: hidden; }
 .modal-s1 .modal-header {
   padding: 27px 35px; }
 .modal-s1 .modal-body {
+  min-height: 485px;
   padding: 45px 35px; }
   .modal-s1 .modal-body .-col-left {
     border-right: 1px solid #F1F1F1; }
@@ -1200,7 +1206,7 @@ select {
   color: #666666;
   font-size: 18px;
   font-weight: 500;
-  padding: 28px 50px;
+  padding: 28px 28px 28px 50px;
   box-shadow: inset 0 -1px 0 #F1F1F1; }
   .accordion-button::after {
     content: "\e905";
@@ -1266,10 +1272,14 @@ select {
   text-decoration: underline; }
 .accordion.-detail .el__label {
   margin-top: 0; }
+.accordion.-detail .box__toggle.active .box__toggle__header {
+  border-color: #fff; }
 .accordion.-detail .box__toggle__header {
   border-bottom: 1px solid #F1F1F1; }
 .accordion.-detail .box__toggle li {
   border-bottom: 1px solid #F1F1F1; }
+  .accordion.-detail .box__toggle li:last-child {
+    border-bottom: 0; }
 
 @media (max-width: 1199px) {
   .sc__content {
@@ -1420,8 +1430,10 @@ select {
       max-width: 100%; }
 
   .modal-s1 .modal-dialog {
-    max-width: 300px;
-    margin: 50px auto; }
+    max-width: 100%;
+    padding: 1.5rem; }
+  .modal-s1 .modal-header {
+    padding: 20px 12px; }
 
   .mb__bukkenfix i {
     left: 20px; } }
@@ -1674,7 +1686,8 @@ select {
   display: flex; }
 .steps li {
   position: relative;
-  min-width: 60px; }
+  min-width: 60px;
+  text-align: center; }
   .steps li:not(:last-child) {
     margin-right: 40px; }
     .steps li:not(:last-child):after {
@@ -1725,116 +1738,114 @@ select {
 .steps .current-info {
   display: none; }
 
-.b__map {
-  position: relative; }
-  .b__map__box {
-    position: absolute;
-    top: 20%;
-    left: 0;
+.b__map__box {
+  position: absolute;
+  top: 20%;
+  left: 2%;
+  width: 100%;
+  max-width: 190px;
+  z-index: 1;
+  background: #fff;
+  border: 1px solid #F1F1F1;
+  border-radius: 6px;
+  overflow: hidden;
+  box-shadow: 0 0 12px #454C55;
+  font-size: 12px; }
+  .b__map__box li {
+    padding: 10px 14px; }
+    .b__map__box li:nth-child(2n - 1) {
+      background: #F1F0F1; }
+  .b__map__box a {
+    color: #51A1B9; }
+.b__map__iframe {
+  height: 485px; }
+  .b__map__iframe img {
     width: 100%;
-    max-width: 190px;
-    z-index: 1;
+    height: 100%;
+    object-fit: cover; }
+.b__map__maker {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 30px;
+  height: 30px;
+  z-index: 1;
+  background: url(../img/maker.svg) no-repeat;
+  background-position: center;
+  background-size: contain;
+  cursor: pointer; }
+.b__map__search {
+  position: absolute;
+  top: 20%;
+  left: 30%;
+  z-index: 1;
+  min-width: 380px;
+  border-radius: 30px;
+  box-shadow: 0 0 12px rgba(69, 76, 85, 0.35); }
+  .b__map__search:before {
+    content: '';
+    position: absolute;
+    top: calc(100% - 1px);
+    left: 0;
+    right: 0;
+    width: 12px;
+    height: 12px;
+    margin: auto;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-top: 8px solid white; }
+  .b__map__search .-input {
     background: #fff;
+    text-align: center;
+    padding: 11px 15px;
     border: 1px solid #F1F1F1;
-    border-radius: 6px;
-    overflow: hidden;
-    box-shadow: 0 0 12px #454C55;
-    font-size: 12px; }
-    .b__map__box li {
-      padding: 10px 14px; }
-      .b__map__box li:nth-child(2n - 1) {
-        background: #F1F0F1; }
-    .b__map__box a {
-      color: #51A1B9; }
-  .b__map__iframe {
-    height: 485px; }
-    .b__map__iframe img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover; }
-  .b__map__maker {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 30px;
-    height: 30px;
-    z-index: 1;
-    background: url(../img/maker.svg) no-repeat;
-    background-position: center;
-    background-size: contain;
-    cursor: pointer; }
-  .b__map__search {
-    position: absolute;
-    top: 20%;
-    left: 30%;
-    z-index: 1;
-    min-width: 380px;
     border-radius: 30px;
-    box-shadow: 0 0 12px rgba(69, 76, 85, 0.35); }
-    .b__map__search:before {
+    font-size: 12px;
+    color: #666666; }
+.b__map .btn.-plus {
+  min-width: 140px;
+  padding: 5px 20px;
+  color: #fff; }
+  .b__map .btn.-plus::after {
+    width: 14px;
+    height: 14px;
+    top: calc(50% - 7px);
+    right: 8px;
+    line-height: 14px; }
+.b__map__addpoint {
+  position: absolute;
+  top: 20%;
+  right: 2%;
+  min-width: 190px;
+  z-index: 2;
+  background: #fff;
+  border: 1px solid #F1F1F1;
+  border-radius: 6px;
+  overflow: hidden;
+  box-shadow: 0 0 12px rgba(69, 76, 85, 0.35);
+  font-size: 12px;
+  padding: 16px 24px; }
+  .b__map__addpoint strong {
+    font-size: 16px; }
+  .b__map__addpoint .-btn-addpoint {
+    position: relative;
+    display: inline-block;
+    border: 0;
+    background: #fff;
+    padding: 6px 20px 6px 27px;
+    border-radius: 30px;
+    box-shadow: 0 0 8px rgba(69, 76, 85, 0.35); }
+    .b__map__addpoint .-btn-addpoint:before {
       content: '';
       position: absolute;
-      top: calc(100% - 1px);
-      left: 0;
-      right: 0;
-      width: 12px;
-      height: 12px;
-      margin: auto;
-      border-left: 6px solid transparent;
-      border-right: 6px solid transparent;
-      border-top: 8px solid white; }
-    .b__map__search .-input {
-      background: #fff;
-      text-align: center;
-      padding: 11px 15px;
-      border: 1px solid #F1F1F1;
-      border-radius: 30px;
-      font-size: 12px;
-      color: #666666; }
-  .b__map .btn.-plus {
-    min-width: 140px;
-    padding: 5px 20px;
-    color: #fff; }
-    .b__map .btn.-plus::after {
-      width: 14px;
-      height: 14px;
-      top: calc(50% - 7px);
-      right: 8px;
-      line-height: 14px; }
-  .b__map__addpoint {
-    position: absolute;
-    top: 20%;
-    right: 0;
-    min-width: 190px;
-    z-index: 2;
-    background: #fff;
-    border: 1px solid #F1F1F1;
-    border-radius: 6px;
-    overflow: hidden;
-    box-shadow: 0 0 12px rgba(69, 76, 85, 0.35);
-    font-size: 12px;
-    padding: 16px 24px; }
-    .b__map__addpoint strong {
-      font-size: 16px; }
-    .b__map__addpoint .-btn-addpoint {
-      position: relative;
-      display: inline-block;
-      border: 0;
-      background: #fff;
-      padding: 6px 20px 6px 27px;
-      border-radius: 30px;
-      box-shadow: 0 0 8px rgba(69, 76, 85, 0.35); }
-      .b__map__addpoint .-btn-addpoint:before {
-        content: '';
-        position: absolute;
-        top: 10px;
-        left: 10px;
-        width: 11px;
-        height: 11px;
-        background: url(../img/plus-circle.svg);
-        background-repeat: no-repeat;
-        background-size: contain;
-        pointer-events: none; }
+      top: 10px;
+      left: 10px;
+      width: 11px;
+      height: 11px;
+      background: url(../img/plus-circle.svg);
+      background-repeat: no-repeat;
+      background-size: contain;
+      pointer-events: none; }
 
 .bmodal__list li {
   align-items: center;
@@ -1887,13 +1898,29 @@ select {
 
 @media (max-width: 991px) {
   .msearch__field {
-    padding: 10px 50px; } }
+    padding: 10px 50px; }
+
+  .modal-dialog {
+    max-width: 100%;
+    height: 100vh;
+    padding: 0 1.5rem; } }
 @media (max-width: 767px) {
+  .modal.show .b__map__box {
+    opacity: 1;
+    top: calc(100% - 115px); }
+    .modal.show .b__map__box.active {
+      top: auto;
+      bottom: 70px; }
+
+  .b__map__search {
+    left: 2%; }
+
   .b__map__box {
     position: fixed;
     z-index: 2;
-    top: calc(100% - 115px);
+    top: 100vh;
     left: 0;
+    opacity: 0;
     max-width: 100%;
     box-shadow: 0 0 12px rgba(69, 76, 85, 0.16);
     padding: 18px 30px 30px;
@@ -1914,7 +1941,10 @@ select {
       padding: 10px 0; }
 
   .b__map__addpoint {
-    width: 100%; }
+    width: 100%;
+    top: auto;
+    bottom: 0;
+    right: 0; }
     .b__map__addpoint .-btn-addpoint {
       position: absolute;
       top: 10px;
@@ -1924,11 +1954,15 @@ select {
     top: 2px; }
 
   .steps li:not(:last-child) {
-    margin-right: 25px; }
+    margin-right: 15px; }
 
   .b__map__search {
     max-width: 100%;
     min-width: auto; }
+
+  .b__map__iframe {
+    height: 420px;
+    padding: 0 1.5rem; }
 
   .bmodal__list li {
     border-bottom: 0;
